lab1/Test/L1-A-12-48.output
Error Type B at Line 1
Error Type B at Line 7
Error Type B at Line 21
Error Type B at Line 23
Error Type B at Line 25
Error Type A at Line 39
Error Type A at Line 41
